# Mausukira

./: .gitignore  LICENSE  README.md
Mausukira/MauskiraTests/: CMakeLists.txt  CMakeLists.txt.in
Mausukira/MauskiraTests/ut/: SampleTest.cpp
Mausukira/MausukiraApp/: CMakeLists.txt  Game.cpp  Game.h  Window.cpp  Window.h
Mausukira/MausukiraApp/ai/: AiController.cpp  AiController.h  CMakeLists.txt  SteeringBehaviour.cpp  SteeringBehaviour.h
Mausukira/MausukiraApp/components/: Components.h  TransformComponent.h
Mausukira/MausukiraApp/dungeon/: CMakeLists.txt  CollisionBox.cpp  CollisionBox.h  Debug.cpp  Debug.h  DungeonGenerator.cpp  DungeonGenerator.h
Mausukira/MausukiraApp/dungeon/algorithms/: AlgorithmsHelper.h  CMakeLists.txt
Mausukira/MausukiraApp/dungeon/algorithms/astar/: AStar.cpp  AStar.h  AStarHelper.h  CMakeLists.txt
Mausukira/MausukiraApp/dungeon/algorithms/mst/: CMakeLists.txt  MinSpanningTree.h
Mausukira/MausukiraApp/dungeon/algorithms/triangulation/: CMakeLists.txt  DelaunayTriangulation.cpp  DelaunayTriangulation.h
Mausukira/MausukiraApp/dungeon/map/: CMakeLists.txt  Constants.h  DungeonGenerator.cpp  DungeonGenerator.h  Map.cpp  Map.h  MapContext.h  MapUtils.h  Room.cpp  RoomGenerator.cpp  RoomGenerator.h
Mausukira/MausukiraApp/dungeon/map/Tile/: Tile.cpp  Tile.h  TileHelper.h
Mausukira/MausukiraApp/dungeon/map/room/: Room.h  RoomGenerator.cpp  RoomGenerator.h
Mausukira/MausukiraApp/dungeon/map/tile/: CMakeLists.txt  Tile.cpp  Tile.h  TileHelper.h
Mausukira/MausukiraApp/ecs/: CMakeLists.txt  Entity.cpp  Entity.h  Scene.cpp  Scene.h
Mausukira/MausukiraApp/ecs/components/: AiComponent.h  AttachmentPoint.h  AttackType.h  CMakeLists.txt  ColliderComponent.cpp  ColliderComponent.h  Components.h  DoorBodyComponent.h  EnemyComponent.h  EntityComponent.h  HealthComponent.cpp  HealthComponent.h  MovableComponent.h  PlayerComponent.h  PositionComponent.h  ScoreComponent.h  ShootingComponents.h  SpriteComponent.cpp  SpriteComponent.h  SteeringBehaviorComponent.cpp  SteeringBehaviourComponent.h  TransformComponent.cpp  TransformComponent.h  VelocityComponent.h
Mausukira/MausukiraApp/ecs/components/enemy/: AttackType.h  CMakeLists.txt  Enemy.h  EnemySpawner.cpp  EnemySpawner.h  EnemyTextureGenerator.h  RndSpriteComponent.cpp  RndSpriteComponent.h  TextureCreator.cpp  TextureCreator.h
Mausukira/MausukiraApp/ecs/components/weapon/: Projectile.cpp  Projectile.h  Weapon.cpp  Weapon.h
Mausukira/MausukiraApp/ecs/entities/: CMakeLists.txt  Entity.cpp  Entity.h  Player.cpp  Player.h
Mausukira/MausukiraApp/ecs/entities/enemy/: CMakeLists.txt  Enemy.cpp  Enemy.h  EnemyParser.cpp  EnemyParser.h  EnemySpawner.cpp  EnemySpawner.h  EnemyTextureGenerator.cpp  EnemyTextureGenerator.h  EnemyTypes.h
Mausukira/MausukiraApp/ecs/entities/weapon/: CMakeLists.txt  Projectile.cpp  Projectile.h  Weapon.h
Mausukira/MausukiraApp/ecs/systems/: AttackSystem.cpp  AttackSystem.h  AtttackSystem.cpp  AtttackSystem.h  CMakeLists.txt  CameraSystem.cpp  CameraSystem.h  CollisionSystem.cpp  CollisionSystem.h  DebugSystem.cpp  DebugSystem.h  LevelChangeSystem.cpp  LevelChangeSystem.h  MovingSystem.cpp  MovingSystem.h  PlayerMoveSystem.cpp  PlayerMoveSystem.h  RenderingSystem.cpp  RenderingSystem.h  ScoreSystem.cpp  ScoreSystem.h  System.cpp  System.h  SystemQueue.cpp  SystemQueue.h  Systems.h
Mausukira/MausukiraApp/ecs/systems/AiSystem/: EnemyFollowSystem.cpp  EnemyFollowSystem.h
Mausukira/MausukiraApp/ecs/systems/CollisionSystem/: CollisionKinematic.cpp  CollisionKinematic.h  CollisionStatic.cpp  CollisionStatic.h  CollisionSystem.cpp  CollisionSystem.h
Mausukira/MausukiraApp/ecs/systems/DamageSystem/: HealthSystem.cpp  HealthSystem.h
Mausukira/MausukiraApp/ecs/systems/EnemySystems/: AttackStateSystem.cpp  AttackStateSystem.h  CMakeLists.txt  EnemyState.cpp  EnemyState.h  EnemyStateSystem.cpp  EnemyStateSystem.h  IdleStateSystem.cpp  IdleStateSystem.h
Mausukira/MausukiraApp/ecs/systems/MoveSystem/: MoveSystem.cpp  MoveSystem.h  PlayerMoveSystem.cpp  PlayerMoveSystem.h
Mausukira/MausukiraApp/ecs/systems/PhysicsSystem/: CMakeLists.txt  ProjectileShootSystem.cpp  ProjectileShootSystem.h
Mausukira/MausukiraApp/ecs/systems/RenderingSystem/: RenderingSystem.cpp  RenderingSystem.h
Mausukira/MausukiraApp/ecs/systems/SpatialHashing/: HashFn.h  SpatialHash.cpp  SpatialHash.h
Mausukira/MausukiraApp/event/: CMakeLists.txt  EventInfo.h  EventManager.cpp  EventManager.h
Mausukira/MausukiraApp/gui/: Button.cpp  Button.h  CMakeLists.txt  Component.h  GuiComponents.cpp  GuiComponents.h
Mausukira/MausukiraApp/scene/: CMakeLists.txt  CollisionBox.cpp  CollisionBox.h  Debug.h  EnemyParser.cpp  EnemyParser.h  Player.cpp  Player.h  Scene.cpp  Scene.h
Mausukira/MausukiraApp/scene/algorithms/: CMakeLists.txt  Coordinate.h  CoordinatesConverter.h
Mausukira/MausukiraApp/scene/algorithms/astar/: AStar.cpp  (+2 more)
Mausukira/MausukiraApp/scene/enemy/: Enemy.cpp  Enemy.h
Mausukira/MausukiraApp/scene/map/: CMakeLists.txt  CellType.h  Constants.h  DungeonGenerator.cpp  DungeonGenerator.h  Map.cpp  Map.h  MapContext.h  MapUtils.h  MinSpanningTree.h  Room.cpp  Room.h  RoomGenerator.cpp  RoomGenerator.h  TerrainGenerator.cpp  TerrainGenerator.h  Tile.h
Mausukira/MausukiraApp/states_stack/: CMakeLists.txt  LevelInfo.h  SharedContext.cpp  SharedContext.h  StateHandler.cpp  StateHandler.h
Mausukira/MausukiraApp/states_stack/states/: CMakeLists.txt  GameOverState.cpp  GameOverState.h  GameState.cpp  GameState.h  IntroState.cpp  IntroState.h  MenuState.cpp  MenuState.h  PauseState.cpp  PauseState.h  ScoreBoardState.cpp  ScoreBoardState.h  State.cpp  State.h
Mausukira/MausukiraApp/utils/: CMakeLists.txt  Math.cpp  Math.h  RandomNumberGenerator.cpp  RandomNumberGenerator.h  SpriteSheetHandler.cpp  SpriteSheetHandler.h  TextureManager.cpp  TextureManager.h
Mausukira/dependencies/: CMakeLists.txt
Mausukira/dependencies/entt/: CMakeLists.txt
Mausukira/dependencies/jsoncpp/: CMakeLists.txt
Mausukira/dependencies/poly2tri/: CMakeLists.txt
Mausukira/dependencies/tgui/: CMakeLists.txt
(+64 files in other folders)
